[coverage:run]
branch = True
omit =
    bleeter/_version.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if __name__ == .__main__.:
fail_under = 96
precision = 2
skip_covered = True

[metadata]
name = bleeter
author = James Rowe
author_email = jnrowe@gmail.com
description = Nasty little twitter client
keywords = twitter notifications
packages = bleeter
include_package_data = True
entry_points = {'console_scripts': ['bleeter = bleeter:main', ]}
data_files =
    [("share/pixmaps", ["bleeter.png", ]),
     ("share/applications", ["bleeter.desktop"])]
license = GPL-3
url = https://github.com/JNRowe/bleeter
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: X11 Applications
    Environment :: X11 Applications :: Gnome
    Environment :: X11 Applications :: GTK
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: OSI Approved
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Other OS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: Other
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Communications
    Topic :: Communications :: Chat
    Topic :: Desktop Environment
    Topic :: Desktop Environment :: Gnome

[tool:pytest]
addopts =
    --cov bleeter --cov-report term-missing --no-cov-on-fail
    --durations=5
    --strict
minversion = 3.2
